@@ -1,3 +1,8 @@
+2007-02-27  Fernando Perez  <Fernando.Perez@colorado.edu>
+
+	* IPython/Shell.py (IPShellGTK.mainloop): update threads calls to
+	avoid a DeprecationWarning from GTK.
+
 2007-02-22  Fernando Perez  <Fernando.Perez@colorado.edu>
 
 	* IPython/genutils.py (clock): I modified clock() to return total
